--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -83,7 +83,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=HyperBeast1
-main.class=test1.Test1
+main.class=com.hyperbeast.main.main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
