--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ dist.jlink.output=${dist.jlink.dir}/HyperBeast1
 endorsed.classpath=
 excludes=
 file.reference.bridj-0.7.0.jar=D:\\Download\\webcam-capture-0.3.12-dist\\libs\\bridj-0.7.0.jar
+file.reference.jcalendar-1.4.jar=D:\\Download\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mssql-jdbc-12.2.0.jre11.jar=D:\\Download\\sqljdbc_12.2.0.0_enu\\sqljdbc_12.2\\enu\\mssql-jdbc-12.2.0.jre11.jar
 file.reference.slf4j-api-1.7.2.jar=D:\\Download\\webcam-capture-0.3.12-dist\\libs\\slf4j-api-1.7.2.jar
 file.reference.TimingFramework-0.55.jar=D:\\Download\\TimingFramework-0.55.jar
@@ -47,7 +48,8 @@ javac.classpath=\
     ${file.reference.webcam-capture-0.3.12.jar}:\
     ${file.reference.bridj-0.7.0.jar}:\
     ${file.reference.slf4j-api-1.7.2.jar}:\
-    ${file.reference.mssql-jdbc-12.2.0.jre11.jar}
+    ${file.reference.mssql-jdbc-12.2.0.jre11.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
